fix issue when menu too tall

--- a/src/main.less
+++ b/src/main.less
@@ -444,6 +444,9 @@
 
     body .main-nav {
       position: fixed;
+      overflow-y: scroll;
+      overflow-x: hidden;
+      height: 100%;
       .sub-level {
         position: fixed;
         margin-top: 41px;
